--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>New updated from feature c branch</h1>
+    <h1>New updated from FEATURE C branch</h1>
 </body>
 
 </html>
